<resources>
<string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login"> Login </string>
    <string name="title_activity_recycle_item">RecycleItem</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login"> Login </string>
    <string name="enter_personal_perfoile"> Enter to your personal profile.com and follow. </string>
    <string name="phone_number">Phone Number </string>
    <string name="password">password </string>
    <string name="signup">Sign Up</string>
    <string name="create_personal_profile">Create your personal profile.com and follow.</string>
    <string name="city">Name</string>
    <string name="email">Email</string>
    <string name="dont_have">"Don't have an account yet?"</string>
    <string name="by_signingup">By signing up,you agree to the </string>
    <string name="Terms_of">Terms of</string>
    <string name="serviceandpolicy">Service and Privacy Policy</string>
    <string name="haveaccount">Already have an account?</string>
    <string name="Comming_Soon">Comming Soon</string>
    <string name="Refresh">Refresh</string>

</resources>
